Corrigiendo permisos dependiendo el role

--- a/views/view_report_collaborator_by_status.html
+++ b/views/view_report_collaborator_by_status.html
@@ -5,7 +5,7 @@
     <title>Hacienda el orosi</title>
   </head>
   <body>
-    <h1>User List</h1>
+    <h1>Lista de colaboradores</h1>
     <ul>
       {{#each collaborators}}
       <li>Nombre: {{this.name}}</li>
